fixed alignment errors

--- a/src/Checkout/styles/checkout.css
+++ b/src/Checkout/styles/checkout.css
@@ -1,7 +1,7 @@
 .checkout-page-container {
 	border: 1px solid black;
 	width: auto;
-	padding: 2em;
+	padding: 1em;
 	margin: 10em 2em;
 	font-family: "Poppins", sans-serif;
 }
@@ -12,14 +12,13 @@
 	display: flex;
 	flex-direction: row;
 	align-items: flex-start;
-	padding: 1em;
+	padding: 1em 0;
 	margin-bottom: 1em;
 	border-bottom: 1px solid lightgrey;
 }
 
 .product-image-container {
 	width: 30%;
-
 }
 
 .product-image-container img{
