--- a/src/Product/styles/product.css
+++ b/src/Product/styles/product.css
@@ -45,8 +45,8 @@
 
 .add-to-cart {
 	font-size: 1.2em;
-	text-align: left;
-	width: 50%;
+	text-align: center;
+	width: 100%;
 	margin: 2em 0;
 }
 
