--- a/src/Shared/Header/styles/header.css
+++ b/src/Shared/Header/styles/header.css
@@ -28,18 +28,25 @@
 }
 
 .header .tabs-side {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-end;
-    position: fixed;
-    right: 0;
-    top: 0;
-    width: 30%;
-    height: 100vh;
-    background-color: white;
-    padding: 1em 3em 1em 1em;
-    gap: 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-end;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 30%;
+  height: 100vh;
+  background-color: white;
+  padding: 1em 3em 1em 1em;
+  gap: 2em;
+}
+
+.header .tab-categories {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 2em;
 }
 
 .close-button {
@@ -58,14 +65,14 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  width: 20%;
+  width: 50%;
 }
 
 .header .icons .shopping-cart {
-  display: block;
+  display: flex;
   height: 1.5em;
-  width: 1.5em;
-  margin-right: 1em;
+  width: 70%;
+  justify-content: flex-end;
   }
 
 .header .icons .shopping-cart-image {
@@ -87,10 +94,11 @@
 
 
   .header .icons .hamburger {
-  display: block;
+  display: flex;
   height: 1.5em;
-  width: 1.5em;
+  width: 20%;
   padding-top: 0.5em;
+  justify-content: flex-end;
   }
 
   .header .icons .hamburger img {
@@ -133,6 +141,13 @@
   .header .tabs .close-button {
     display: none;
   }
+
+.header .tab-categories {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  gap: 2em;
+}
 
   .header .tabs .tab-name {
     padding: .3em;
